# SFML_nauka

./: CMakeLists.txt  main.cpp
include/: Keys.h  Level.h  Snake.h
src/: Level.cpp  Snake.cpp
